tests/parser/bad/lib/lmodule-with.scillib
(* Typo *)
scilla_verrsion 0

library Mylib

type House =
| Kind of String
